--- a/development/RDM_DMX_Master.ui
+++ b/development/RDM_DMX_Master.ui
@@ -59,7 +59,7 @@
      <bool>true</bool>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="RDM_tab">
      <attribute name="title">
@@ -1425,7 +1425,7 @@
        <rect>
         <x>140</x>
         <y>300</y>
-        <width>291</width>
+        <width>296</width>
         <height>20</height>
        </rect>
       </property>
@@ -2198,9 +2198,9 @@
      <widget class="QLabel" name="label_14">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>250</y>
-        <width>101</width>
+        <x>325</x>
+        <y>255</y>
+        <width>46</width>
         <height>20</height>
        </rect>
       </property>
@@ -2211,24 +2211,24 @@
        </font>
       </property>
       <property name="text">
-       <string>Verde</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Verde&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
      <widget class="QSpinBox" name="spinBox_2">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>210</y>
-        <width>91</width>
+        <x>390</x>
+        <y>170</y>
+        <width>41</width>
         <height>22</height>
        </rect>
       </property>
      </widget>
-     <widget class="QPushButton" name="send_command_2">
+     <widget class="QPushButton" name="send_command_dmx">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>340</y>
+        <x>230</x>
+        <y>420</y>
         <width>121</width>
         <height>24</height>
        </rect>
@@ -2237,32 +2237,32 @@
        <string>Enviar comando</string>
       </property>
      </widget>
-     <widget class="QSpinBox" name="spinBox_3">
+     <widget class="QSpinBox" name="green_dmx_box">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>250</y>
-        <width>91</width>
+        <x>390</x>
+        <y>255</y>
+        <width>41</width>
         <height>22</height>
        </rect>
       </property>
      </widget>
-     <widget class="QSpinBox" name="spinBox_4">
+     <widget class="QSpinBox" name="red_dmx_box">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>165</x>
         <y>250</y>
-        <width>91</width>
+        <width>41</width>
         <height>22</height>
        </rect>
       </property>
      </widget>
-     <widget class="QLabel" name="label_15">
+     <widget class="QLabel" name="blue_dmx_box">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>210</y>
-        <width>101</width>
+        <x>335</x>
+        <y>170</y>
+        <width>36</width>
         <height>20</height>
        </rect>
       </property>
@@ -2273,16 +2273,16 @@
        </font>
       </property>
       <property name="text">
-       <string>Azul</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Azul&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_16">
       <property name="geometry">
        <rect>
-        <x>70</x>
-        <y>210</y>
-        <width>101</width>
-        <height>20</height>
+        <x>85</x>
+        <y>165</y>
+        <width>61</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="font">
@@ -2292,14 +2292,14 @@
        </font>
       </property>
       <property name="text">
-       <string>Branco</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Branco&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="distination_UID_2">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>130</y>
+        <x>260</x>
+        <y>85</y>
         <width>221</width>
         <height>21</height>
        </rect>
@@ -2326,8 +2326,8 @@
      <widget class="QLabel" name="label_17">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>130</y>
+        <x>90</x>
+        <y>85</y>
         <width>141</width>
         <height>20</height>
        </rect>
@@ -2345,10 +2345,10 @@
      <widget class="QLabel" name="label_18">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>250</y>
-        <width>101</width>
-        <height>20</height>
+        <x>75</x>
+        <y>240</y>
+        <width>71</width>
+        <height>36</height>
        </rect>
       </property>
       <property name="font">
@@ -2358,15 +2358,15 @@
        </font>
       </property>
       <property name="text">
-       <string>Vermelho</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Vermelho&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <widget class="QSpinBox" name="spinBox">
+     <widget class="QSpinBox" name="white_dmx_box">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>210</y>
-        <width>91</width>
+        <x>165</x>
+        <y>170</y>
+        <width>41</width>
         <height>22</height>
        </rect>
       </property>
@@ -2374,8 +2374,8 @@
      <widget class="QLabel" name="label_19">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>30</y>
+        <x>220</x>
+        <y>25</y>
         <width>141</width>
         <height>41</height>
        </rect>
@@ -2388,6 +2388,86 @@
       </property>
       <property name="text">
        <string>DMX - Master</string>
+      </property>
+     </widget>
+     <widget class="QSlider" name="white_dmx_slider">
+      <property name="geometry">
+       <rect>
+        <x>225</x>
+        <y>155</y>
+        <width>18</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QSlider" name="green_dmx_slider">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>240</y>
+        <width>18</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QSlider" name="red_dmx_slider">
+      <property name="geometry">
+       <rect>
+        <x>225</x>
+        <y>235</y>
+        <width>18</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QSlider" name="blue_dmx_slider">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>155</y>
+        <width>18</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QSlider" name="RGBW_dmx_slider">
+      <property name="geometry">
+       <rect>
+        <x>55</x>
+        <y>355</y>
+        <width>476</width>
+        <height>18</height>
+       </rect>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QSlider{
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 0, 0, 255), stop:0.166 rgba(255, 255, 0, 255), stop:0.333 rgba(0, 255, 0, 255), stop:0.5 rgba(0, 255, 255, 255), stop:0.666 rgba(0, 0, 255, 255), stop:0.833 rgba(255, 0, 255, 255), stop:1 rgba(255, 0, 0, 255));
+	
+}</string>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="tickPosition">
+       <enum>QSlider::NoTicks</enum>
+      </property>
+      <property name="tickInterval">
+       <number>10</number>
       </property>
      </widget>
     </widget>
