--- a/development/RDM_DMX_Master.ui
+++ b/development/RDM_DMX_Master.ui
@@ -345,9 +345,9 @@
      <widget class="QPushButton" name="send_command">
       <property name="geometry">
        <rect>
-        <x>220</x>
-        <y>430</y>
-        <width>131</width>
+        <x>230</x>
+        <y>435</y>
+        <width>106</width>
         <height>24</height>
        </rect>
       </property>
@@ -2190,6 +2190,29 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;40&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
+     <widget class="QComboBox" name="serialPort">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>435</y>
+        <width>68</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>85</x>
+        <y>435</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Porta serial</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="DMX_tab">
      <attribute name="title">
@@ -2399,6 +2422,20 @@
         <height>51</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QSlider::handle:vertical{
+	height: 4px;
+	background-color: rgb(255, 255, 255);
+ 	margin: 1px; /* expand outside the groove */
+	border-radius: 4px;
+	border: 1px solid black;
+	width: 8px;
+}
+</string>
+      </property>
+      <property name="maximum">
+       <number>255</number>
+      </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
@@ -2411,6 +2448,20 @@
         <width>18</width>
         <height>51</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QSlider::handle:vertical{
+	height: 4px;
+	background-color: rgb(0, 255, 0);
+ 	margin: 1px; /* expand outside the groove */
+	border-radius: 4px;
+	border: 1px solid black;
+	width: 8px;
+}
+</string>
+      </property>
+      <property name="maximum">
+       <number>255</number>
       </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -2425,6 +2476,23 @@
         <height>51</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QSlider::handle:vertical{
+	height: 4px;
+	background-color: rgb(255, 0, 0);
+ 	margin: 1px; /* expand outside the groove */
+	border-radius: 4px;
+	border: 1px solid black;
+	width: 8px;
+}
+
+
+
+</string>
+      </property>
+      <property name="maximum">
+       <number>255</number>
+      </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
@@ -2438,6 +2506,20 @@
         <height>51</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QSlider::handle:vertical{
+	height: 4px;
+	background-color: rgb(0, 0, 255);
+ 	margin: 1px; /* expand outside the groove */
+	border-radius: 4px;
+	border: 1px solid black;
+	width: 8px;
+}
+</string>
+      </property>
+      <property name="maximum">
+       <number>255</number>
+      </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
@@ -2448,17 +2530,32 @@
         <x>55</x>
         <y>355</y>
         <width>476</width>
-        <height>18</height>
+        <height>26</height>
        </rect>
       </property>
       <property name="layoutDirection">
        <enum>Qt::LeftToRight</enum>
       </property>
       <property name="styleSheet">
-       <string notr="true">QSlider{
-	background: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 0, 0, 255), stop:0.166 rgba(255, 255, 0, 255), stop:0.333 rgba(0, 255, 0, 255), stop:0.5 rgba(0, 255, 255, 255), stop:0.666 rgba(0, 0, 255, 255), stop:0.833 rgba(255, 0, 255, 255), stop:1 rgba(255, 0, 0, 255));
-	
+       <string notr="true">QSlider::handle:horizontal
+{
+    background: rgb(255, 255, 255);
+    width: 6px;
+    height: 12px;
+	margin: 2px 0px;
+    border-radius: 7px;
+    border: 1px solid rgb(0, 0, 0);
+
+}
+QSlider::groove:horizontal
+{
+	border-radius: 2px;
+    background: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 0, 0, 255), stop:0.166 rgba(255, 255, 0, 255), stop:0.333 rgba(0, 255, 0, 255), stop:0.5 rgba(0, 255, 255, 255), stop:0.666 rgba(0, 0, 255, 255), stop:0.833 rgba(255, 0, 255, 255), stop:1 rgba(255, 0, 0, 255));
+
 }</string>
+      </property>
+      <property name="maximum">
+       <number>255</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -2468,6 +2565,19 @@
       </property>
       <property name="tickInterval">
        <number>10</number>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>455</y>
+        <width>151</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Enviar automaticamente</string>
       </property>
      </widget>
     </widget>
