--- a/development/RDM_DMX_Master.ui
+++ b/development/RDM_DMX_Master.ui
@@ -65,7 +65,7 @@
 }</string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="RDM_tab">
      <attribute name="title">
@@ -2249,6 +2249,12 @@
         <height>16</height>
        </size>
       </property>
+      <property name="autoDefault">
+       <bool>false</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
       <property name="flat">
        <bool>true</bool>
       </property>
@@ -2294,7 +2300,7 @@
       <property name="geometry">
        <rect>
         <x>325</x>
-        <y>255</y>
+        <y>220</y>
         <width>46</width>
         <height>20</height>
        </rect>
@@ -2313,7 +2319,7 @@
       <property name="geometry">
        <rect>
         <x>390</x>
-        <y>170</y>
+        <y>150</y>
         <width>46</width>
         <height>22</height>
        </rect>
@@ -2326,7 +2332,7 @@
       <property name="geometry">
        <rect>
         <x>230</x>
-        <y>465</y>
+        <y>495</y>
         <width>121</width>
         <height>24</height>
        </rect>
@@ -2339,7 +2345,7 @@
       <property name="geometry">
        <rect>
         <x>390</x>
-        <y>255</y>
+        <y>220</y>
         <width>46</width>
         <height>22</height>
        </rect>
@@ -2352,7 +2358,7 @@
       <property name="geometry">
        <rect>
         <x>165</x>
-        <y>250</y>
+        <y>215</y>
         <width>46</width>
         <height>22</height>
        </rect>
@@ -2365,7 +2371,7 @@
       <property name="geometry">
        <rect>
         <x>335</x>
-        <y>170</y>
+        <y>150</y>
         <width>36</width>
         <height>20</height>
        </rect>
@@ -2384,7 +2390,7 @@
       <property name="geometry">
        <rect>
         <x>85</x>
-        <y>165</y>
+        <y>145</y>
         <width>61</width>
         <height>31</height>
        </rect>
@@ -2399,12 +2405,12 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Branco&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="distination_UID_2">
+     <widget class="QLineEdit" name="DMX_address">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>345</x>
         <y>85</y>
-        <width>221</width>
+        <width>41</width>
         <height>21</height>
        </rect>
       </property>
@@ -2430,7 +2436,7 @@
      <widget class="QLabel" name="label_17">
       <property name="geometry">
        <rect>
-        <x>90</x>
+        <x>175</x>
         <y>85</y>
         <width>141</width>
         <height>20</height>
@@ -2450,7 +2456,7 @@
       <property name="geometry">
        <rect>
         <x>75</x>
-        <y>240</y>
+        <y>205</y>
         <width>71</width>
         <height>36</height>
        </rect>
@@ -2469,7 +2475,7 @@
       <property name="geometry">
        <rect>
         <x>165</x>
-        <y>170</y>
+        <y>150</y>
         <width>46</width>
         <height>22</height>
        </rect>
@@ -2501,7 +2507,7 @@
       <property name="geometry">
        <rect>
         <x>225</x>
-        <y>155</y>
+        <y>135</y>
         <width>18</width>
         <height>51</height>
        </rect>
@@ -2528,7 +2534,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>240</y>
+        <y>205</y>
         <width>18</width>
         <height>51</height>
        </rect>
@@ -2555,7 +2561,7 @@
       <property name="geometry">
        <rect>
         <x>225</x>
-        <y>235</y>
+        <y>200</y>
         <width>18</width>
         <height>51</height>
        </rect>
@@ -2585,7 +2591,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>155</y>
+        <y>135</y>
         <width>18</width>
         <height>51</height>
        </rect>
@@ -2611,8 +2617,8 @@
      <widget class="QSlider" name="RGB_dmx_slider">
       <property name="geometry">
        <rect>
-        <x>55</x>
-        <y>355</y>
+        <x>45</x>
+        <y>280</y>
         <width>476</width>
         <height>26</height>
        </rect>
@@ -2655,7 +2661,7 @@ QSlider::groove:horizontal
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>500</y>
+        <y>515</y>
         <width>151</width>
         <height>26</height>
        </rect>
@@ -2668,7 +2674,7 @@ QSlider::groove:horizontal
       <property name="geometry">
        <rect>
         <x>-5</x>
-        <y>420</y>
+        <y>315</y>
         <width>591</width>
         <height>16</height>
        </rect>
@@ -2699,7 +2705,7 @@ QSlider::groove:horizontal
      <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
-        <x>240</x>
+        <x>325</x>
         <y>85</y>
         <width>20</width>
         <height>20</height>
@@ -2707,6 +2713,147 @@ QSlider::groove:horizontal
       </property>
       <property name="text">
        <string> 0x</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="DMX_command_label">
+      <property name="geometry">
+       <rect>
+        <x>45</x>
+        <y>350</y>
+        <width>521</width>
+        <height>136</height>
+       </rect>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_15">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>330</y>
+        <width>206</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Frame a ser enviado em exadecimal</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>350</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::RightToLeft</enum>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;0&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_60">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>367</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;32&lt;/p&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_65">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>384</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;64&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_66">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>401</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;96&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_67">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>418</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;128&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_68">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>435</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;160&lt;/p&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_69">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>469</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;224&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_70">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>452</y>
+        <width>20</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;192&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </widget>
@@ -2818,7 +2965,7 @@ QSlider::groove:horizontal
   <tabstop>send_command_dmx</tabstop>
   <tabstop>green_dmx_box</tabstop>
   <tabstop>red_dmx_box</tabstop>
-  <tabstop>distination_UID_2</tabstop>
+  <tabstop>DMX_address</tabstop>
   <tabstop>white_dmx_box</tabstop>
   <tabstop>tabWidget</tabstop>
   <tabstop>green_dmx_slider</tabstop>
