--- a/development/RDM_DMX_Master.ui
+++ b/development/RDM_DMX_Master.ui
@@ -99,7 +99,7 @@
      <enum>QTabWidget::North</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="RDM_tab">
      <attribute name="title">
@@ -2357,8 +2357,8 @@
      <widget class="QLabel" name="label_14">
       <property name="geometry">
        <rect>
-        <x>325</x>
-        <y>220</y>
+        <x>375</x>
+        <y>230</y>
         <width>46</width>
         <height>20</height>
        </rect>
@@ -2376,7 +2376,7 @@
      <widget class="QSpinBox" name="blue_dmx_box">
       <property name="geometry">
        <rect>
-        <x>390</x>
+        <x>440</x>
         <y>150</y>
         <width>46</width>
         <height>22</height>
@@ -2390,7 +2390,7 @@
       <property name="geometry">
        <rect>
         <x>230</x>
-        <y>505</y>
+        <y>570</y>
         <width>121</width>
         <height>24</height>
        </rect>
@@ -2402,8 +2402,8 @@
      <widget class="QSpinBox" name="green_dmx_box">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>220</y>
+        <x>440</x>
+        <y>230</y>
         <width>46</width>
         <height>22</height>
        </rect>
@@ -2415,8 +2415,8 @@
      <widget class="QSpinBox" name="red_dmx_box">
       <property name="geometry">
        <rect>
-        <x>165</x>
-        <y>215</y>
+        <x>245</x>
+        <y>225</y>
         <width>46</width>
         <height>22</height>
        </rect>
@@ -2428,7 +2428,7 @@
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>335</x>
+        <x>385</x>
         <y>150</y>
         <width>36</width>
         <height>20</height>
@@ -2447,7 +2447,7 @@
      <widget class="QLabel" name="label_16">
       <property name="geometry">
        <rect>
-        <x>85</x>
+        <x>165</x>
         <y>145</y>
         <width>61</width>
         <height>31</height>
@@ -2513,8 +2513,8 @@
      <widget class="QLabel" name="label_18">
       <property name="geometry">
        <rect>
-        <x>75</x>
-        <y>205</y>
+        <x>155</x>
+        <y>220</y>
         <width>71</width>
         <height>36</height>
        </rect>
@@ -2532,7 +2532,7 @@
      <widget class="QSpinBox" name="white_dmx_box">
       <property name="geometry">
        <rect>
-        <x>165</x>
+        <x>245</x>
         <y>150</y>
         <width>46</width>
         <height>22</height>
@@ -2564,7 +2564,7 @@
      <widget class="QSlider" name="white_dmx_slider">
       <property name="geometry">
        <rect>
-        <x>225</x>
+        <x>305</x>
         <y>135</y>
         <width>18</width>
         <height>51</height>
@@ -2594,8 +2594,8 @@
      <widget class="QSlider" name="green_dmx_slider">
       <property name="geometry">
        <rect>
-        <x>450</x>
-        <y>205</y>
+        <x>500</x>
+        <y>210</y>
         <width>18</width>
         <height>51</height>
        </rect>
@@ -2624,8 +2624,8 @@
      <widget class="QSlider" name="red_dmx_slider">
       <property name="geometry">
        <rect>
-        <x>225</x>
-        <y>200</y>
+        <x>305</x>
+        <y>210</y>
         <width>18</width>
         <height>51</height>
        </rect>
@@ -2657,7 +2657,7 @@
      <widget class="QSlider" name="blue_dmx_slider">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>500</x>
         <y>135</y>
         <width>18</width>
         <height>51</height>
@@ -2688,7 +2688,7 @@
       <property name="geometry">
        <rect>
         <x>45</x>
-        <y>280</y>
+        <y>290</y>
         <width>476</width>
         <height>26</height>
        </rect>
@@ -2718,7 +2718,9 @@ QSlider::groove:horizontal
 	border-radius: 2px;
     background: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 0, 0, 255), stop:0.166 rgba(255, 255, 0, 255), stop:0.333 rgba(0, 255, 0, 255), stop:0.5 rgba(0, 255, 255, 255), stop:0.666 rgba(0, 0, 255, 255), stop:0.833 rgba(255, 0, 255, 255), stop:1 rgba(255, 0, 0, 255));
 
-}</string>
+}
+
+</string>
       </property>
       <property name="maximum">
        <number>768</number>
@@ -2737,7 +2739,7 @@ QSlider::groove:horizontal
       <property name="geometry">
        <rect>
         <x>215</x>
-        <y>530</y>
+        <y>595</y>
         <width>151</width>
         <height>26</height>
        </rect>
@@ -2750,7 +2752,7 @@ QSlider::groove:horizontal
       <property name="geometry">
        <rect>
         <x>-5</x>
-        <y>315</y>
+        <y>380</y>
         <width>591</width>
         <height>16</height>
        </rect>
@@ -2795,7 +2797,7 @@ QSlider::groove:horizontal
       <property name="geometry">
        <rect>
         <x>180</x>
-        <y>340</y>
+        <y>405</y>
         <width>206</width>
         <height>16</height>
        </rect>
@@ -2832,7 +2834,7 @@ QSlider::groove:horizontal
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>365</y>
+        <y>430</y>
         <width>556</width>
         <height>126</height>
        </rect>
@@ -2865,6 +2867,155 @@ QSlider::groove:horizontal
       </property>
       <property name="maximum">
        <number>513</number>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="formatValues">
+      <property name="geometry">
+       <rect>
+        <x>35</x>
+        <y>155</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Decimal</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Hexadecimal</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Percentual</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QComboBox" name="resolutionValues">
+      <property name="geometry">
+       <rect>
+        <x>35</x>
+        <y>230</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>8 bits</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>16 bits</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="formatLabel">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>135</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Formato</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="resolutionLabel">
+      <property name="geometry">
+       <rect>
+        <x>45</x>
+        <y>210</y>
+        <width>56</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Resolução</string>
+      </property>
+     </widget>
+     <widget class="QSlider" name="brightness_slider">
+      <property name="geometry">
+       <rect>
+        <x>45</x>
+        <y>330</y>
+        <width>476</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>OpenHandCursor</cursorShape>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QSlider::handle:horizontal
+{
+    background: rgb(255, 255, 255);
+    width: 6px;
+    height: 12px;
+	margin: 2px 0px;
+    border-radius: 7px;
+    border: 1px solid rgb(0, 0, 0);
+}
+QSlider::groove:horizontal
+{
+	background: rgb(200, 200, 200)
+}
+
+
+
+
+</string>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lampIcon">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>330</y>
+        <width>26</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">image: url(:/newPrefix/images/lamp.png);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>45</x>
+        <y>360</y>
+        <width>26</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>0%</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_60">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>360</y>
+        <width>31</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>100%</string>
       </property>
      </widget>
     </widget>
