--- a/development/resource.qrc
+++ b/development/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>images/lamp.png</file>
     <file>images/reload.png</file>
   </qresource>
 </RCC>
