--- a/development/RDM_DMX_Master.ui
+++ b/development/RDM_DMX_Master.ui
@@ -3131,7 +3131,7 @@ QSlider::groove:horizontal
    <widget class="QPushButton" name="refreshPorts">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>525</x>
       <y>675</y>
       <width>31</width>
       <height>31</height>
@@ -3149,7 +3149,7 @@ QSlider::groove:horizontal
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="H:/Github/GUI_GrowLight_controler/GUI_RDM_DMX_Master/development/resource.qrc">
+     <iconset resource="resource.qrc">
       <normaloff>:/newPrefix/images/reload.png</normaloff>:/newPrefix/images/reload.png</iconset>
     </property>
     <property name="iconSize">
@@ -3171,7 +3171,7 @@ QSlider::groove:horizontal
    <widget class="QComboBox" name="serialPort">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>455</x>
       <y>680</y>
       <width>68</width>
       <height>21</height>
@@ -3181,7 +3181,7 @@ QSlider::groove:horizontal
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>205</x>
+      <x>380</x>
       <y>680</y>
       <width>61</width>
       <height>21</height>
@@ -3189,6 +3189,45 @@ QSlider::groove:horizontal
     </property>
     <property name="text">
      <string>Porta serial</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="serialPort_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>680</y>
+      <width>68</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_65">
+    <property name="geometry">
+     <rect>
+      <x>115</x>
+      <y>680</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Idioma</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="languageIcon">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>680</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/newPrefix/images/language.png);</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
@@ -3227,7 +3266,7 @@ QSlider::groove:horizontal
   </action>
   <action name="actionReload">
    <property name="icon">
-    <iconset resource="H:/Github/GUI_GrowLight_controler/GUI_RDM_DMX_Master/development/resource.qrc">
+    <iconset resource="resource.qrc">
      <normaloff>:/newPrefix/images/reload.png</normaloff>:/newPrefix/images/reload.png</iconset>
    </property>
    <property name="text">
@@ -3307,7 +3346,7 @@ QSlider::groove:horizontal
   <tabstop>autoSend_dmx_command</tabstop>
  </tabstops>
  <resources>
-  <include location="H:/Github/GUI_GrowLight_controler/GUI_RDM_DMX_Master/development/resource.qrc"/>
+  <include location="resource.qrc"/>
  </resources>
  <connections/>
  <designerdata>
